TestScenarios/response-time/manifests/dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: response-time-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: response-time-app
  template:
    metadata:
      labels:
        app: response-time-app
    spec:
      containers:
      - name: response-time-app
        image: weedesigners/response-time-app:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "0.1"
          limits:
            cpu: "0.2"
            memory: 100Mi
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: response-time-app-svc
spec:
  selector:
    app: response-time-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
